spec: Minor changes to introduction

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -27,6 +27,7 @@
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{listings}
+\usepackage{courier}
 \hypersetup{
 	pdftitle={Pflichtenheft},
 	bookmarks=true,
@@ -37,7 +38,8 @@
 
 \usepackage{pflichtenheft}
 
-\lstset{language=Prolog} 
+\lstset{language=Prolog}
+\lstset{basicstyle=\ttfamily,breaklines=true}
 
 \begin{document}
 \maketitle
@@ -53,41 +55,41 @@ father(homer, bart).
 father(abe, homer).
 \end{lstlisting}
 
-So gilt, dass Homer der Vater von Bart ist, und Abe der Vater von Homer.
+So gilt, dass Homer der Vater von Bart ist und Abe der Vater von Homer.
 
 Für eine Abfrage erhalten wir also folgende Ergebnisse:
 \begin{lstlisting}
-?- father(homer,bart).
-yes.
+?- father(homer, bart).
+yes .
 ?- father(bart, abe).
-no.
+no .
 \end{lstlisting}
 
 Nun ist es möglich, Relationen basierend auf Fakten einzuführen. Setzen wir also Großvater für alle Väter von Vätern indem wir Variablen benutzen.
 \begin{lstlisting}
-granfather(X,Y) :- father(X,Z),father(Z,Y).
+grandfather(X, Y) :- father(X, Z), father(Z, Y).
 \end{lstlisting}
 
-Selbes ist möglich für Abfragen.
+Selbiges ist möglich für Abfragen.
 \begin{lstlisting}
-?- father(X,bart)
-X=homer
-?- father(X,Y)
-X=homer, Y=bart
-X=abe, Y=homer
-?- grandfather(X,Y)
-X=abe, Y=bart
+?- father(X, bart).
+X = homer .
+?- father(X, Y).
+X = homer, Y = bart ;
+X = abe, Y = homer .
+?- grandfather(X, Y).
+X = abe, Y = bart .
 \end{lstlisting}
 
 Die Antworten sind alle möglichen Kombinationen aus den Variablen die den Fakten und Relationen entsprechen.
 
-Prolog ist hierbei anders als "andere" Programmiersprachen da es sich um eine deklarative Programmiersprache handelt. Die Relationen basieren auf zuvor definierten Fakten.
+Prolog ist hierbei anders als \enquote{andere} Programmiersprachen, da es sich um eine deklarative Programmiersprache handelt. Die Relationen basieren auf zuvor definierten Fakten.
 
-VIPER, die VIPER Interactive Prolog Education Runtime, ist ein Programm zur Bearbeitung und dem Testen von einfachen Prolog-Programmen. Über die visuelle Schnittstelle ist es dem Nutzer möglich, Prolog zu schreiben, zu testen und Anfragen zu visualisieren.
+VIPER, die VIPER Interactive Prolog Education Runtime, ist ein Programm zur Bearbeitung und dem Testen von einfachen Prolog-Programmen. Über die visuelle Schnittstelle ist es dem Nutzer möglich, Prolog zu schreiben, Abfragen zu stellen und diese visualisieren zu lassen.
 
-Dank des automatisch visualisierten Graphen ist es dem Nutzer hierbei möglich, die Interpretation des Programmes schrittweise anzuzeigen und nachzuvollziehen.
+Dank des automatisch generierten Graphen ist es dem Nutzer hierbei möglich, die Interpretation des Programmes schrittweise anzuzeigen und nachzuvollziehen.
 
-Es soll damit erreicht werden, dem Nutzer die Funktionsweiße von Prolog-Programmen durch die graphische Visualisierung näher zu führen und zum Verständnis von Prolog beizutragen.
+Damit soll dem Nutzer die Funktionsweise von Prolog-Programmen durch die graphische Visualisierung näher gebracht werden und zum verbesserten Verständnis von Prolog beitragen.
 
 \pagebreak
 \section{Kriterien}
