spec: Update GUI template
- Update GUI template to reflect the updated functional requirements
- Add new rules to Makefile for automatic SVG -> PNG conversion
- Include image of GUI explaining the sections of the main view

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -566,11 +566,14 @@ Eine automatische Formatierung von Prolog-Quellcode ist über eine Schaltfläche
 \section{GUI-Entwürfe}
 
 \begin{figure}[hb]
-\fbox{\includegraphics[width=\textwidth]{image/just_after_start.png}}
+\fbox{\includegraphics[width=\textwidth]{build/gui/main_view_initial.png}}
 \caption{\label{fig:editor}
-Hauptfenster nach dem Starten des Programms ohne weitere Aktionen
+    Hauptfenster umittelbar nach dem Starten des Programms
 }
 \end{figure}
+
+Das Hauptfenster besteht aus der Fensterleiste (A), der Menüleiste (1), dem Editor (2), der Konsole (3), dem Eingabefeld (4) und der Visualisierungsbox (5).
+Dabei ist die Fensterleiste kein Bestandteil des eigentlichen Programms; sie ist von der graphischen Oberfläche des Betriebssystems vorgegeben.
 
 \section{Glossar}
 
