--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -575,6 +575,18 @@ Eine automatische Formatierung von Prolog-Quellcode ist über eine Schaltfläche
 Das Hauptfenster besteht aus der Fensterleiste (A), der Menüleiste (1), dem Editor (2), der Konsole (3), dem Eingabefeld (4) und der Visualisierungsbox (5).
 Dabei ist die Fensterleiste kein Bestandteil des eigentlichen Programms; sie ist von der graphischen Oberfläche des Betriebssystems vorgegeben.
 
+\begin{figure}[hb]
+\fbox{\includegraphics[width=\textwidth]{build/gui/main_view_filemenu.png}}
+\caption{\label{fig:editor}
+    Hauptfenster mit ausgewähltem \enquote{Datei}-Menü
+}
+\end{figure}
+
+Das \enquote{Datei}-Menü (1) hat die Einträge \enquote{Öffnen}, \enquote{Speichern}, \enquote{Speichern als...}, \enquote{Zuletzt verwendet} und \enquote{Beenden}.
+\enquote{Öffnen} und \enquote{Speichern} führen die jeweiligen Funktionen aus; während \enquote{Speichern} nur bei neu angelegten Prolog-Programmen einen Auswahldialog anzeigt, zeigt \enquote{Speichern als...} immer einen Auswahldialog an.
+\enquote{Beenden} beendet das Programm.
+\enquote{Zuletzt verwendet} enthält eine Liste von bis zu fünf zuletzt verwendeten Programmen (2).
+
 \section{Glossar}
 
 \textbf{Nutzer}:
