--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -619,14 +619,26 @@ Das Eingabefeld bleibt weiterhin deaktiviert.
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
-    \includegraphics[width=\linewidth]{build/gui/main_view_parse_success.png}
+\includegraphics[width=\linewidth]{build/gui/main_view_parse_success.png}
 }
-    \captionof{figure}{Hauptfenster nach Klick auf \enquote{Parsen}, mit korrektem Prolog-Programm}
+\captionof{figure}{Hauptfenster nach Klick auf \enquote{Parsen}, mit korrektem Prolog-Programm}
 \end{minipage}
 
 Klickt der Nutzer auf \enquote{Parsen}, versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
-Gibt es keine Fehlermeldungen, so wird eine entsprechende Meldung in der Konsole angezeigt.
+Treten dabei keine Fehler auf, wird eine entsprechende Meldung in der Konsole angezeigt.
 Das Eingabefeld wird aktiviert; der Nutzer kann jetzt Abfragen eingeben.
+
+\subsection{Fehlerhafte Abfrage}
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_question_fail.png}
+}
+\captionof{figure}{Hauptfenster nach fehlerhafter Abfrage im Eingabefeld}
+\end{minipage}
+
+Gibt der Nutzer eine Abfrage im Eingabefeld ein, versucht der Parser, diese Eingabe zu einem einzelnen Ziel zu verarbeiten.
+Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt.
 
 \section{Glossar}
 
