spec: Add annotations to all GUI drafts

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -598,9 +598,9 @@ Das \enquote{Datei}-Menü (1) hat die Einträge \enquote{Öffnen}, \enquote{Spei
 \captionof{figure}{Hauptfenster nach dem Öffnen des Beispielprogramms}
 \end{minipage}
 
-Nach dem Öffnen des Beispielprogramms wird deren Inhalt im Editor angezeigt.
-Die Konsole gibt eine entsprechende Meldung aus.
-Das Eingabefeld bleibt weiterhin deaktiviert.
+Nach dem Öffnen des Beispielprogramms wird deren Inhalt im Editor angezeigt (1).
+Die Konsole gibt eine entsprechende Meldung aus (2).
+Das Eingabefeld bleibt weiterhin deaktiviert (3).
 
 \subsection{Parsen fehlgeschlagen}
 
@@ -611,9 +611,9 @@ Das Eingabefeld bleibt weiterhin deaktiviert.
 \captionof{figure}{Hauptfenster nach Klick auf \enquote{Parsen}, mit inkorrektem Prolog-Programm}
 \end{minipage}
 
-Klickt der Nutzer auf \enquote{Parsen}, versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
-Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt.
-Das Eingabefeld bleibt weiterhin deaktiviert.
+Klickt der Nutzer auf \enquote{Parsen} (1), versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
+Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt (2).
+Das Eingabefeld bleibt weiterhin deaktiviert (3).
 
 \subsection{Parsen erfolgreich}
 
@@ -624,9 +624,9 @@ Das Eingabefeld bleibt weiterhin deaktiviert.
 \captionof{figure}{Hauptfenster nach Klick auf \enquote{Parsen}, mit korrektem Prolog-Programm}
 \end{minipage}
 
-Klickt der Nutzer auf \enquote{Parsen}, versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
-Treten dabei keine Fehler auf, wird eine entsprechende Meldung in der Konsole angezeigt.
-Das Eingabefeld wird aktiviert; der Nutzer kann jetzt Abfragen eingeben.
+Klickt der Nutzer auf \enquote{Parsen} (1), versucht der Parser das Prolog-Programm im Editor zu verarbeiten.
+Treten dabei keine Fehler auf, wird eine entsprechende Meldung in der Konsole angezeigt (2).
+Das Eingabefeld wird aktiviert; der Nutzer kann jetzt Abfragen eingeben (3).
 
 \subsection{Fehlerhafte Abfrage}
 
@@ -637,8 +637,8 @@ Das Eingabefeld wird aktiviert; der Nutzer kann jetzt Abfragen eingeben.
 \captionof{figure}{Hauptfenster nach fehlerhafter Abfrage im Eingabefeld}
 \end{minipage}
 
-Gibt der Nutzer eine Abfrage im Eingabefeld ein, versucht der Parser, diese Eingabe zu einem einzelnen Ziel zu verarbeiten.
-Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt.
+Gibt der Nutzer eine Abfrage im Eingabefeld ein (1), versucht der Parser, diese Eingabe zu einem einzelnen Ziel zu verarbeiten.
+Stößt er dabei auf Fehler, wird eine Fehlermeldung in der Konsole angezeigt (2).
 
 \subsection{Erfolgreiche Abfrage}
 
