--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -376,7 +376,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 
 \nonFunctionality{Das Programm startet auf einem modernen System innerhalb von 30 Sekunden und ist voll einsatzbereit.}{nfc:startup}
 
-\nonFunctionality{Ein importiertes oder geschriebenes Prolog Programm ohne Verwendung von Rekursion und im Umfang von maximal 100 Zeilen Code ist innerhalb von maximal 3 Sekunden interpretiert und innerhalb von weiteren 5 Sekunden visualisiert.}{nfc:timelimit}
+\nonFunctionality{Ein importiertes oder geschriebenes Prolog-Programm im Umfang von maximal 100 Zeilen Code ist innerhalb von maximal 3 Sekunden geparst und einzelne Schritte werden innerhalb von 5 Sekunden visualisiert.}{nfc:timelimit}
 
 \nonFunctionality{Das Design wirkt modern und ansprechend.}{nfc:design}
 
@@ -388,7 +388,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 
 \nonFunctionality{Fehlerhafte Prolog-Programme sollen nie zu einem Absturz des Programms führen.}{nfc:crashresistance}
 
-\nonFunctionality{Der Prolog Interpreter lässt sich in seiner Funktionalität einfach erweitern, um weitere Sprachfeatures zu unterstützen.}{nfc:extendable}
+\nonFunctionality{Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, um weitere Sprachfeatures zu unterstützen.}{nfc:extendable}
 
 \pagebreak
 \section{Tests}
